4.59

- Added: Param "With auto revive if no player is nearby (less than 215m):" (description.ext d_with_autorevive, default 1, No, disabled)
- Added: Headshot indicator and param to enable/disable it (d_show_headshots, default 0, disabled)
- Added: More civilian unit types, by longtimegamer
- Added: Emergency exit action menu entry for air vehicles in non ACE versions. Pops up if the air vehicle you are in can't move anymore or has damage
- Added: New param d_targetselect_time (Target selection time in server lobby, default 30 seconds) where you can set the target selection time
- Added: Points for reviving players when using ACE medical system, by Wazzledi
- Added: ACE splints/earplugs to arsenal, by Wazzledi
- Changed: Respawn teammates 1 m behind squad leader position to avoid friendly fire, by longtimegamer
- Fixed: Some armor being spawned when d_WithLessArmor set to none, by longtimegamer
- Fixed: bayo attachment in weapon class names was missing for correcting weapon names (SOG/UNSUNG)
- Fixed: Ambush and overwatch units are now allowed to move once injured, by longtimegamer
- Fixed: Some scores weren't added to player scores (like scores for destroying barracks, etc)
- Fixed: make_dom.bat didn't delete some files
- Fixed: make_dom.bat now needs the newest makePBO version
- Fixed: Very short CAS delay if artillery cooldown is unlimited, by longtimegamer
- Fixed: Airstrike with steeper angle of attack and high altitude, by longtimegamer
- Fixed: Rappeling for players was disabled
- Improved: Using new A3 2.08 pose command where possible
- Updated: Chinese translation by XenLau
- And as always many not mentioned optimizations