@@ -8,6 +8,7 @@
 - Added: Points for reviving players when using ACE medical system, by Wazzledi
 - Added: ACE splints/earplugs to arsenal, by Wazzledi
 - Changed: Respawn teammates 1 m behind squad leader position to avoid friendly fire, by longtimegamer
+- Changed: You can now set viewdistances individually for inf, vehicles and air in the Dashboard/Statusdialog (max value maxviewdistance)
 - Fixed: Some armor being spawned when d_WithLessArmor set to none, by longtimegamer
 - Fixed: bayo attachment in weapon class names was missing for correcting weapon names (SOG/UNSUNG)
 - Fixed: Ambush and overwatch units are now allowed to move once injured, by longtimegamer
