@@ -32,6 +32,9 @@ if (hasInterface) then {
 	d_curviewdistance = _vd;
 	d_curobjectdistance = _vd + 100;
 	
+	d_ViewDistanceVec = profileNamespace getVariable ["dom_viewdistancevec", d_curviewdistance];
+	d_ViewDistanceAir = profileNamespace getVariable ["dom_viewdistanceair", d_curviewdistance];
+	
 	d_earplugs_userakey = profileNamespace getVariable ["dom_earplugs_userakey", 0];
 	d_3dmarker_userakey = profileNamespace getVariable ["dom_3dmarker_userakey", 0];
 	if (d_earplugs_userakey < 0 || {d_earplugs_userakey > 19}) then {d_earplugs_userakey = 0};
