@@ -2,6 +2,9 @@ STR_DOM_MISSIONSTRING_11
 STR_DOM_MISSIONSTRING_193
 STR_DOM_MISSIONSTRING_237
 STR_DOM_MISSIONSTRING_239
+STR_DOM_MISSIONSTRING_358
+STR_DOM_MISSIONSTRING_358V
+STR_DOM_MISSIONSTRING_358A
 STR_DOM_MISSIONSTRING_363
 STR_DOM_MISSIONSTRING_363_ON
 STR_DOM_MISSIONSTRING_399_VERYLOW
@@ -51,6 +54,7 @@ STR_DOM_MISSIONSTRING_1120
 STR_DOM_MISSIONSTRING_1121
 STR_DOM_MISSIONSTRING_1122
 STR_DOM_MISSIONSTRING_1123
+STR_DOM_MISSIONSTRING_FAST_INTRO
 STR_DOM_MISSIONSTRING_1171
 STR_DOM_MISSIONSTRING_1172
 STR_DOM_MISSIONSTRING_ENABLESIMCAMPS
@@ -133,6 +137,7 @@ STR_DOM_MISSIONSTRING_2026
 STR_DOM_MISSIONSTRING_2027
 STR_DOM_MISSIONSTRING_2028
 STR_DOM_MISSIONSTRING_2028_INFANTRY
+STR_DOM_MISSIONSTRING_CIV_RESISTANCE
 STR_DOM_MISSIONSTRING_2028_RABBIT
 STR_DOM_MISSIONSTRING_2029
 STR_DOM_MISSIONSTRING_2030
@@ -208,3 +213,12 @@ STR_DOM_MISSIONSTRING_2086
 STR_DOM_MISSIONSTRING_2087
 STR_DOM_MISSIONSTRING_2088
 STR_DOM_MISSIONSTRING_2089
+STR_DOM_MISSIONSTRING_2090
+STR_DOM_MISSIONSTRING_SHOW_HEADSHOTS
+STR_DOM_MISSIONSTRING_CLIENT_ONLY
+STR_DOM_MISSIONSTRING_CLIENT_GROUP
+STR_DOM_MISSIONSTRING_CLIENT_ALL
+STR_DOM_MISSIONSTRING_HEADSHOT
+STR_DOM_MISSIONSTRING_HEADSHOT_CLIENT
+STR_DOM_MISSIONSTRING_2091
+STR_DOM_MISSIONSTRING_2092
