@@ -5,12 +5,16 @@ STR_DOM_MISSIONSTRING_214
 STR_DOM_MISSIONSTRING_237
 STR_DOM_MISSIONSTRING_239
 STR_DOM_MISSIONSTRING_266
+STR_DOM_MISSIONSTRING_358
+STR_DOM_MISSIONSTRING_358V
+STR_DOM_MISSIONSTRING_358A
 STR_DOM_MISSIONSTRING_400_EXTREME
 STR_DOM_MISSIONSTRING_418DEFAULT
 STR_DOM_MISSIONSTRING_GUERRILLAS
 STR_DOM_MISSIONSTRING_541
 STR_DOM_MISSIONSTRING_656
 STR_DOM_MISSIONSTRING_722_GENERIC_NAME
+STR_DOM_MISSIONSTRING_FAST_INTRO
 STR_DOM_MISSIONSTRING_1569
 STR_DOM_MISSIONSTRING_1573
 STR_DOM_MISSIONSTRING_1575
@@ -169,6 +173,7 @@ STR_DOM_MISSIONSTRING_2026
 STR_DOM_MISSIONSTRING_2027
 STR_DOM_MISSIONSTRING_2028
 STR_DOM_MISSIONSTRING_2028_INFANTRY
+STR_DOM_MISSIONSTRING_CIV_RESISTANCE
 STR_DOM_MISSIONSTRING_2028_RABBIT
 STR_DOM_MISSIONSTRING_2029
 STR_DOM_MISSIONSTRING_2030
@@ -210,3 +215,12 @@ STR_DOM_MISSIONSTRING_2086
 STR_DOM_MISSIONSTRING_2087
 STR_DOM_MISSIONSTRING_2088
 STR_DOM_MISSIONSTRING_2089
+STR_DOM_MISSIONSTRING_2090
+STR_DOM_MISSIONSTRING_SHOW_HEADSHOTS
+STR_DOM_MISSIONSTRING_CLIENT_ONLY
+STR_DOM_MISSIONSTRING_CLIENT_GROUP
+STR_DOM_MISSIONSTRING_CLIENT_ALL
+STR_DOM_MISSIONSTRING_HEADSHOT
+STR_DOM_MISSIONSTRING_HEADSHOT_CLIENT
+STR_DOM_MISSIONSTRING_2091
+STR_DOM_MISSIONSTRING_2092
