@@ -1,11 +1,25 @@
+STR_DOM_MISSIONSTRING_358
+STR_DOM_MISSIONSTRING_358V
+STR_DOM_MISSIONSTRING_358A
 STR_DOM_MISSIONSTRING_ALL
+STR_DOM_MISSIONSTRING_FAST_INTRO
 STR_DOM_MISSIONSTRING_1805_TRIGGERMAN
 STR_DOM_MISSIONSTRING_1805_DEFUSE
 STR_DOM_MISSIONSTRING_1805_DEFUSE_NOW
 STR_DOM_MISSIONSTRING_EVENTWARNINGTIME
 STR_DOM_MISSIONSTRING_EVENTCIVMASSACRE
 STR_DOM_MISSIONSTRING_EVENTCIVMASSACRE_END
+STR_DOM_MISSIONSTRING_CIV_RESISTANCE
 STR_DOM_MISSIONSTRING_PRISONERSANDEXPLOSIVES_DEFUSE
 STR_DOM_MISSIONSTRING_PRISONERSANDEXPLOSIVES_TRIGGERMAN
 STR_DOM_MISSIONSTRING_MT_RADIUS
 STR_DOM_MISSIONSTRING_2085
+STR_DOM_MISSIONSTRING_2090
+STR_DOM_MISSIONSTRING_SHOW_HEADSHOTS
+STR_DOM_MISSIONSTRING_CLIENT_ONLY
+STR_DOM_MISSIONSTRING_CLIENT_GROUP
+STR_DOM_MISSIONSTRING_CLIENT_ALL
+STR_DOM_MISSIONSTRING_HEADSHOT
+STR_DOM_MISSIONSTRING_HEADSHOT_CLIENT
+STR_DOM_MISSIONSTRING_2091
+STR_DOM_MISSIONSTRING_2092
