@@ -3,6 +3,9 @@ STR_DOM_MISSIONSTRING_179a
 STR_DOM_MISSIONSTRING_235
 STR_DOM_MISSIONSTRING_239
 STR_DOM_MISSIONSTRING_308
+STR_DOM_MISSIONSTRING_358
+STR_DOM_MISSIONSTRING_358V
+STR_DOM_MISSIONSTRING_358A
 STR_DOM_MISSIONSTRING_400_EXTREME
 STR_DOM_MISSIONSTRING_418DEFAULT
 STR_DOM_MISSIONSTRING_GUERRILLAS
@@ -16,6 +19,7 @@ STR_DOM_MISSIONSTRING_719_MILITARY
 STR_DOM_MISSIONSTRING_722_GENERIC_NAME
 STR_DOM_MISSIONSTRING_953
 STR_DOM_MISSIONSTRING_1007
+STR_DOM_MISSIONSTRING_FAST_INTRO
 STR_DOM_MISSIONSTRING_1177_FORCE_NO_HUD
 STR_DOM_MISSIONSTRING_1224
 STR_DOM_MISSIONSTRING_1251
@@ -62,6 +66,7 @@ STR_DOM_MISSIONSTRING_2019
 STR_DOM_MISSIONSTRING_2020
 STR_DOM_MISSIONSTRING_2021
 STR_DOM_MISSIONSTRING_2023
+STR_DOM_MISSIONSTRING_CIV_RESISTANCE
 STR_DOM_MISSIONSTRING_2029
 STR_DOM_MISSIONSTRING_2030
 STR_DOM_MISSIONSTRING_2031
@@ -133,3 +138,12 @@ STR_DOM_MISSIONSTRING_2086
 STR_DOM_MISSIONSTRING_2087
 STR_DOM_MISSIONSTRING_2088
 STR_DOM_MISSIONSTRING_2089
+STR_DOM_MISSIONSTRING_2090
+STR_DOM_MISSIONSTRING_SHOW_HEADSHOTS
+STR_DOM_MISSIONSTRING_CLIENT_ONLY
+STR_DOM_MISSIONSTRING_CLIENT_GROUP
+STR_DOM_MISSIONSTRING_CLIENT_ALL
+STR_DOM_MISSIONSTRING_HEADSHOT
+STR_DOM_MISSIONSTRING_HEADSHOT_CLIENT
+STR_DOM_MISSIONSTRING_2091
+STR_DOM_MISSIONSTRING_2092
